--- a/htmlcss/02-melon-artist/index.html
+++ b/htmlcss/02-melon-artist/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>아티스트 채널&gt;멜론</title>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="header">
@@ -24,11 +26,13 @@
                     <span>8. 폴킴</span>
                 </div>
             </div>
-            <a href="http://www.melon.com/buy/pamphlet/discount.htm" title="10/27 상품매대 - 페이지 이동" class="d_item mlog"
-                data="LOG_PRT_CODE=1&amp;MENU_PRT_CODE=0&amp;MENU_ID_LV1=&amp;CLICK_AREA_PRT_CODE=Z04&amp;ACTION_AF_CLICK=V1&amp;CLICK_CONTS_TYPE_CODE=&amp;CLICK_CONTS_ID=&amp;PROMO_CONTS_TYPE_CODE=&amp;PROMO_CONTS_ID=&amp;PROMO_SEQ=178818&amp;PROMO_DTL_SEQ=1"
-                style="display: inline;">
-                <img width="280" height="75" src="https://cdnimg.melon.co.kr/svc/images/main/imgUrl20201027082351.png" alt="">
-            </a>
+            <div class="cnm_banner">
+                <a href="http://www.melon.com/buy/pamphlet/discount.htm" title="10/27 상품매대 - 페이지 이동" class="d_item mlog"
+                    data="LOG_PRT_CODE=1&amp;MENU_PRT_CODE=0&amp;MENU_ID_LV1=&amp;CLICK_AREA_PRT_CODE=Z04&amp;ACTION_AF_CLICK=V1&amp;CLICK_CONTS_TYPE_CODE=&amp;CLICK_CONTS_ID=&amp;PROMO_CONTS_TYPE_CODE=&amp;PROMO_CONTS_ID=&amp;PROMO_SEQ=178818&amp;PROMO_DTL_SEQ=1"
+                    style="display: inline;">
+                    <img width="280" height="75" src="https://cdnimg.melon.co.kr/svc/images/main/imgUrl20201027082351.png" alt="">
+                </a>
+            </div>
         </div>
         <nav class="header__nav">
             <ul class="nav__menu">
