--- a/htmlcss/mdn/video-audio/a03-youtube-embed.html
+++ b/htmlcss/mdn/video-audio/a03-youtube-embed.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Youtube iframe</title>
 </head>
+
 <body>
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/pfDSVriFHps" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
 </body>
+
 </html>
